# garnet

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATE.md  Cargo.toml  EPILOGUE-CREDITS.md  FAQ.md  FOUNDER-STORY.md  GARNET_GAP_ANALYSIS_AND_COMPLETION_ROADMAP.md  GARNET_PHASE7_COMPLETION_REPORT.md  MIT-ORIGIN-SUMMARY.md  ORIGIN-STORY.md  README.md  SECURITY.md  _CANONICAL_DELIVERABLES_INDEX.md  _CLAUDE_CODE_DISCOVERY_REFERENCE.md  deny.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
A_Research_Papers/: GARNET-The-Reconciliation-of-Rust-and-Ruby.md  Garnet_ Agent-Native Language Synthesis.docx  Paper_III_Garnet_Synthesis_v2_1.docx  Paper_III_Garnet_Synthesis_v2_1.md  Paper_II_Ruby_Deep_Dive_Updated.docx  Paper_IV_Addendum_v1_0.md  Paper_IV_Garnet_Agentic_Systems_v2_1_1.docx  Paper_I_Rust_Deep_Dive_Updated.docx  Paper_VII_Implementation_Ladder_and_Tooling.md  Paper_VI_Empirical_Validation_Protocol.md  Paper_VI_Garnet_Novel_Frontiers.md  Paper_VI_v4_0_Revisions.md  Paper_V_Addendum_v1_0.md  Paper_V_Garnet_Formal_Grounding_v1_0.docx
B_Four_Model_Consensus/: GARNET_v2_1_Four_Model_Consensus_Memo.md  GARNET_v2_1_Gemini_Synthesis.md
C_Language_Specification/: AGENTS.md  GARNET_Academic_Submission_Strategy.md  GARNET_Agent_Documentation_Runtime_Contracts.md  GARNET_Benchmarking_and_Evaluation_Plan.md  GARNET_Compiler_Architecture_Spec.md  GARNET_Compression_Techniques_Reference.md  GARNET_Distribution_and_Installation_Spec.md  GARNET_Memory_Manager_Architecture.md  GARNET_Migration_Guide_Ruby_Python.md  GARNET_Tier2_Ecosystem_Specifications.md  GARNET_v0_2_Mini_Spec_Stub.md  GARNET_v0_3_Formal_Grammar_EBNF.md  GARNET_v0_3_Mini_Spec.md  GARNET_v1_0_Mini_Spec.md  (+5 more)
garnet-actor-runtime/: AGENTS.md  Cargo.toml
garnet-actor-runtime/src/: address.rs  lib.rs  reloadkey.rs  runtime.rs  statecert.rs
garnet-actor-runtime/tests/: bounded_mail.rs  reload.rs  runtime.rs  stress.rs
garnet-check-v0.3/: AGENTS.md  Cargo.toml
garnet-check-v0.3/src/: audit.rs  borrow.rs  caps_graph.rs  lib.rs
garnet-check-v0.3/tests/: borrow.rs  caps.rs  extended.rs  properties.rs
garnet-cli/: AGENTS.md  Cargo.toml  LICENSE.txt
garnet-cli/assets/: README.md
garnet-cli/examples/: cache_hmac_smoke.rs
garnet-cli/linux/: README.md  garnet-actor.service
garnet-cli/macos/: README.md  build-pkg.sh  distribution.xml
garnet-cli/macos/resources/: LICENSE.txt  conclusion.html  welcome.html
garnet-cli/man/: garnet.1
garnet-cli/src/: audit_deps.rs  cache.rs  convert_cmd.rs  knowledge.rs  lib.rs  machine_key.rs  manifest.rs  new_cmd.rs  provenance.rs  strategies.rs
garnet-cli/src/cmd/: build.rs  check.rs  convert.rs  doc.rs  eval.rs  fmt.rs  keygen.rs  mod.rs  new.rs  parse.rs  repl.rs  run.rs  test.rs  verify.rs
garnet-cli/templates/: AGENTS.md
garnet-cli/templates/agent-orchestrator/: .gitignore  Garnet.toml  README.md
garnet-cli/templates/agent-orchestrator/src/: main.garnet
garnet-cli/templates/agent-orchestrator/tests/: test_main.garnet
garnet-cli/templates/cli/: .gitignore  Garnet.toml  README.md
garnet-cli/templates/cli/src/: main.garnet
garnet-cli/templates/cli/tests/: test_main.garnet
garnet-cli/templates/web-api/: .gitignore  Garnet.toml  README.md
garnet-cli/templates/web-api/src/: main.garnet
garnet-cli/templates/web-api/tests/: test_main.garnet
garnet-cli/tests/: cache_episodes.rs  cache_hmac.rs  cli_smoke.rs  conformance_skeleton.rs  examples.rs  integration_e2e.rs  knowledge_strategies.rs  provenance.rs  reproducible.rs
garnet-cli/windows/: README.md  sandbox-smoke.wsb  smoke-test.cmd
garnet-cli/wix/: License.rtf  README.md  main.wxs
garnet-convert/: AGENTS.md  Cargo.toml
garnet-convert/src/: cir.rs  emitter.rs  error.rs  idioms.rs  lib.rs  lineage.rs  metrics.rs  witness.rs
garnet-convert/src/frontends/: go.rs  mod.rs  python.rs  ruby.rs  rust.rs
garnet-convert/tests/: corpus.rs
garnet-interp-v0.3/: AGENTS.md  Cargo.toml
garnet-interp-v0.3/benches/: eval.rs
garnet-interp-v0.3/examples/: hello.garnet  open_questions_demo.garnet  paper_vi_walkthrough.garnet  realistic_program.garnet
garnet-interp-v0.3/src/: control.rs  env.rs  error.rs  eval.rs  lib.rs  pattern.rs  prelude.rs  repl.rs  stdlib_bridge.rs  stmt.rs  value.rs
garnet-interp-v0.3/tests/: boundary_errors.rs  e2e_examples.rs  eval_basic.rs  eval_collections.rs  eval_control.rs  eval_extended.rs  eval_functions.rs  eval_open_questions.rs  eval_paper_vi.rs  eval_pattern_matrix.rs  eval_prelude.rs  eval_structs.rs  kind_dispatch.rs  kind_guard.rs  properties.rs  run_hello_example.rs
garnet-memory-v0.3/: AGENTS.md  Cargo.toml
garnet-memory-v0.3/benches/: vector.rs
garnet-memory-v0.3/examples/: calibration_episodic.rs  calibration_procedural.rs  calibration_semantic.rs  calibration_working.rs
garnet-memory-v0.3/src/: episodic.rs  lib.rs  policy.rs  procedural.rs  semantic.rs  working.rs
garnet-memory-v0.3/tests/: basic.rs  properties.rs  properties_proptest.rs  stress.rs
garnet-parser/: Cargo.toml  README.md  expr.rs  lib.rs
garnet-parser-v0.3/: AGENTS.md  Cargo.toml  README.md
garnet-parser-v0.3/benches/: parse.rs
garnet-parser-v0.3/examples/: build_agent.garnet  control_flow.garnet  error_handling.garnet  greeter_actor.garnet  memory_units.garnet  safe_module.garnet
garnet-parser-v0.3/src/: ast.rs  budget.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
garnet-parser-v0.3/src/grammar/: actors.rs  control_flow.rs  expr.rs  functions.rs  memory.rs  mod.rs  modules.rs  patterns.rs  stmts.rs  types.rs  user_types.rs
garnet-parser-v0.3/tests/: adversarial.rs  budget.rs  lex_edge_cases.rs  lex_tests.rs  parse_actors.rs  parse_control_flow.rs  parse_edge_cases.rs  parse_examples.rs  parse_expr.rs  parse_functions.rs  parse_memory.rs  parse_modules.rs  parse_negative.rs  parse_patterns.rs  parse_stmts.rs  parse_user_types.rs  properties.rs
garnet-stdlib/: AGENTS.md  Cargo.toml
garnet-stdlib/src/: collections.rs  crypto.rs  error.rs  fs.rs  lib.rs  net.rs  ratelimit.rs  registry.rs  sandbox.rs  strings.rs  time.rs
(+100 files in other folders)
