[workspace]
resolver = "2"
members = [
    "garnet-parser-v0.3",
    "garnet-interp-v0.3",
    "garnet-check-v0.3",
    "garnet-memory-v0.3",
    "garnet-cli",
    "garnet-actor-runtime",
    "garnet-stdlib",
    "garnet-convert",
    "xtask",
]
# Exclude the archived v0.2 parser (flat-file layout, retained at
# `archive/garnet-parser-v0.2/` for audit trail only — superseded by
# `garnet-parser-v0.3/`).
exclude = ["archive/garnet-parser-v0.2"]

# The user-facing Garnet release version. The `garnet` CLI binary (in
# `garnet-cli/`) is the canonical public version surface and stays in lockstep
# with the value below; individual library crates carry their own `[package]
# version` to allow independent semver as their public APIs stabilize.
[workspace.package]
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Island Development Crew"]
repository = "https://github.com/Island-Dev-Crew/garnet"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
