[package]
name = "garnet-actor-runtime"
version = "0.4.0"
edition = "2021"
description = "Concurrent actor runtime for Garnet v0.3 (Rung 6). Schedules actors on real OS threads with mpsc-channel mailboxes; provides synchronous send + ask, cooperative shutdown, and inspection hooks."
license = "MIT OR Apache-2.0"
authors = ["Island Development Crew"]

[dependencies]
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
