[package]
name = "garnet-check"
version = "0.3.0"
edition = "2021"
description = "Safe-mode ownership & boundary validator for Garnet v0.3 (Rung 4 skeleton)."
license = "MIT OR Apache-2.0"

[dependencies]
garnet-parser = { version = "0.3.0", path = "../garnet-parser-v0.3" }
garnet-stdlib = { version = "0.4.0", path = "../garnet-stdlib" }
thiserror = "2.0"

[dev-dependencies]
proptest = "1"
