[package]
name = "garnet-cli"
version = "0.4.2"
edition = "2021"
description = "Top-level garnet(1) CLI — parse / check / run / test / new / keygen / build --sign / verify / convert (v0.4.2)."
license = "MIT OR Apache-2.0"

[[bin]]
name = "garnet"
path = "src/bin/garnet.rs"

[dependencies]
garnet-parser = { path = "../garnet-parser-v0.3" }
garnet-interp = { path = "../garnet-interp-v0.3" }
garnet-check = { path = "../garnet-check-v0.3" }
garnet-memory = { path = "../garnet-memory-v0.3" }
garnet-convert = { path = "../garnet-convert" }
miette = { version = "7.6", features = ["fancy"] }
blake3 = "1.5"
rusqlite = { version = "0.32", features = ["bundled"] }
getrandom = "0.2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }

[dev-dependencies]
tempfile = "3"

# ─────────────────────────────────────────────────────────────────────
# v4.2 Phase 6A — Cross-platform installer metadata.
# Only the package.metadata sections below are read by external tools
# (cargo-wix for Windows, cargo-deb for Debian/Ubuntu, cargo-generate-
# rpm for Fedora/RHEL). Nothing here affects `cargo build` or tests.
# ─────────────────────────────────────────────────────────────────────

[package.metadata.wix]
# cargo-wix configuration. The .wxs file lives at wix/main.wxs;
# cargo-wix picks that path up automatically.
upgrade-guid = "6E6A3D5F-3B0E-4D8F-9A3F-4F1D8C8A9A10"
path-guid    = "AEFB1A62-6C5B-4F9E-8D3F-49F5E2C9F702"

[package.metadata.deb]
name = "garnet"
maintainer = "Jon <jon@island-dev-crew.example>"
copyright = "2026, Island Development Crew"
license-file = ["../LICENSE", "0"]
extended-description = """\
Garnet is a dual-mode agent-native language platform. Managed mode
(def + ARC + exceptions) feels Ruby-like. Safe mode (@safe + fn + ownership
+ Result) feels Rust-like. The mode boundary auto-bridges errors and
ARC-affine semantics. First-class memory primitives for agent cores,
typed actors with bounded mailboxes + Ed25519 signed hot-reload,
deterministic signed manifests, and a 136-test security surface across
four hardening layers."""
depends = "$auto, ca-certificates"
section = "devel"
priority = "optional"
assets = [
  ["target/release/garnet",              "usr/bin/",                       "755"],
  ["man/garnet.1",                       "usr/share/man/man1/",            "644"],
  ["../README.md",                       "usr/share/doc/garnet/",          "644"],
  ["../LICENSE",                         "usr/share/doc/garnet/",          "644"],
  ["linux/garnet-actor.service",         "usr/lib/systemd/system/",        "644"],
]
conf-files = []

[package.metadata.generate-rpm]
name = "garnet"
summary = "Dual-mode agent-native language platform (Rust rigor. Ruby velocity.)"
license = "MIT OR Apache-2.0"
# cargo-generate-rpm resolves asset `source` paths relative to the workspace
# target directory (unlike cargo-deb which resolves them relative to the
# package manifest). Workspace layout here puts target/ at ../target/ from
# garnet-cli/, but cargo-generate-rpm CWD-s into the workspace-target lookup
# implicitly, so use bare `target/release/garnet` for the binary and
# package-relative paths for the other assets.
assets = [
  { source = "target/release/garnet",                       dest = "/usr/bin/garnet",                                      mode = "755" },
  { source = "garnet-cli/man/garnet.1",                     dest = "/usr/share/man/man1/garnet.1",                         mode = "644" },
  { source = "README.md",                                   dest = "/usr/share/doc/garnet/README.md",                      mode = "644" },
  { source = "LICENSE",                                     dest = "/usr/share/doc/garnet/LICENSE",                        mode = "644" },
  { source = "garnet-cli/linux/garnet-actor.service",       dest = "/usr/lib/systemd/system/garnet-actor.service",         mode = "644" },
]
# `requires` mirrors the Debian `depends = "$auto, ca-certificates"`
# line. cargo-generate-rpm resolves glibc + libgcc automatically; only
# project-specific deps belong here.
[package.metadata.generate-rpm.requires]
ca-certificates = "*"
