[package]
name = "garnet-interp"
version = "0.3.0"
edition = "2021"
description = "Managed-mode tree-walk interpreter for Garnet v0.3 (Rung 3)."
license = "MIT OR Apache-2.0"

[dependencies]
garnet-parser = { version = "0.3.0", path = "../garnet-parser-v0.3" }
garnet-memory = { version = "0.3.0", path = "../garnet-memory-v0.3" }
garnet-stdlib = { version = "0.4.0", path = "../garnet-stdlib" }
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval"
harness = false
