[package]
name = "garnet-memory"
version = "0.3.0"
edition = "2021"
description = "Reference Memory Core + Manager SDK for Garnet v0.3 (Rung 5 stub)."
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vector"
harness = false
