[package]
name = "garnet-stdlib"
version = "0.4.0"
edition = "2021"
authors = ["Island Development Crew"]
license = "MIT OR Apache-2.0"
description = "Garnet standard library — P0 primitives for OS, network, time, strings, crypto. Each subsystem is gated on its paired Security Layer 2 defense (CapCaps, NetDefaults, BoundedMail, ManifestSig)."

[dependencies]
blake3 = "1.5"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tempfile = "3"
